<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRecipeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextColor="@android:color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/recipeImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/darker_gray"
                android:contentDescription="@string/content_desc_recipe_image"
                android:scaleType="centerCrop" />

            <Button
                android:id="@+id/buttonAddPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/button_add_photo" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.PaleoRecipes.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <com.leo.paleorecipes.ui.components.BlackTextInputEditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_recipe_name"
                    android:inputType="textCapWords"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/primary"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:theme="@style/ThemeOverlay.PaleoRecipes.TextInputEditText" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/label_category"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/categorySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/label_difficulty"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/difficultySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.PaleoRecipes.TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1">

                    <com.leo.paleorecipes.ui.components.BlackTextInputEditText
                        android:id="@+id/editTextPrepTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_prep_time"
                        android:inputType="number"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/primary"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:theme="@style/ThemeOverlay.PaleoRecipes.TextInputEditText" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.PaleoRecipes.TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1">

                    <com.leo.paleorecipes.ui.components.BlackTextInputEditText
                        android:id="@+id/editTextCookTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_cook_time"
                        android:inputType="number"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/primary"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:theme="@style/ThemeOverlay.PaleoRecipes.TextInputEditText" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.PaleoRecipes.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <com.leo.paleorecipes.ui.components.BlackTextInputEditText
                    android:id="@+id/editTextServings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_servings"
                    android:inputType="number"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/primary"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:theme="@style/ThemeOverlay.PaleoRecipes.TextInputEditText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.PaleoRecipes.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <com.leo.paleorecipes.ui.components.BlackTextInputEditText
                    android:id="@+id/editTextIngredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/hint_ingredients"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:minLines="5"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/primary"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:theme="@style/ThemeOverlay.PaleoRecipes.TextInputEditText"
                    android:backgroundTint="@android:color/transparent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.PaleoRecipes.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <com.leo.paleorecipes.ui.components.BlackTextInputEditText
                    android:id="@+id/editTextInstructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/hint_instructions"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:minLines="5"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/primary"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:theme="@style/ThemeOverlay.PaleoRecipes.TextInputEditText"
                    android:backgroundTint="@android:color/transparent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.PaleoRecipes.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <com.leo.paleorecipes.ui.components.BlackTextInputEditText
                    android:id="@+id/editTextNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/hint_notes"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:minLines="3"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/primary"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:theme="@style/ThemeOverlay.PaleoRecipes.TextInputEditText"
                    android:backgroundTint="@android:color/transparent" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonCancel"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/button_cancel"
                app:strokeColor="@color/primary"
                app:strokeWidth="1dp"
                android:textColor="@color/primary" />

            <Button
                android:id="@+id/buttonSaveRecipe"
                style="@style/Widget.PaleoRecipes.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/button_save_recipe" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
